--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <div class="first-section">
+        <div class="section1">
             <div class="header-logo">Header Logo</div>
             <ul class="right-links">
                 <li><a href="#">header link one</a></li>
@@ -18,22 +18,49 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <div class="second-section">
+        <div class="section2">
             <div class="content1">
                 <h2>This website is awesome!</h2>
-                <div class="secondary-text">This website has some subtext that goes here under the main title. 
+                <div class="secondary-text">This website has some subtext that goes here under the main title.
                     It's a smaller font and the color is lower contrast
                 </div>
                 <button class="button1">Sign up</button>
             </div>
-                <div class="placeholder">this is a placeholder for an image</div>
+            <div class="placeholder">this is a placeholder for an image</div>
         </div>
     </div>
-    <div class="container">
-        <div class="info">Some random information.</div>
+    <!-- end of the header -->
 
+    <!-- first section-->
 
+    <div class="info">Some random information.</div>
+    <div class="flex-container">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+        <div class="four"></div>
     </div>
+    <div class="subtext">
+        <div>This is some subtext under an illustration
+            or image
+        </div>
+        <div>This is some subtext under an illustration
+            or image
+        </div>
+        <div>This is some subtext under an illustration
+            or image
+        </div>
+        <div>This is some subtext under an illustration
+            or image
+        </div>
+    </div>
+
+    <!-- end of first section -->
+
+    <!-- second section -->
+
+
+
 </body>
 
 </html>
