--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <div class="section1">
             <div class="header-logo">Header Logo</div>
             <ul class="right-links">
@@ -19,7 +19,7 @@
             </ul>
         </div>
         <div class="section2">
-            <div class="content1">
+            <div class="content">
                 <h2>This website is awesome!</h2>
                 <div class="secondary-text">This website has some subtext that goes here under the main title.
                     It's a smaller font and the color is lower contrast
@@ -28,11 +28,10 @@
             </div>
             <div class="placeholder">this is a placeholder for an image</div>
         </div>
-    </div>
+    </header>
     <!-- end of the header -->
 
     <!-- first section-->
-
     <div class="info">Some random information.</div>
     <div class="flex-container">
         <div class="one"></div>
@@ -54,13 +53,36 @@
             or image
         </div>
     </div>
-
     <!-- end of first section -->
 
     <!-- second section -->
+    <div class="quote1">
+        <div class="text1">This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it. Who knows?
+            All I know is that it looks nice.
+        </div>
+    </div>
+    <div class="quote2">
+        <div class="text2">-Thor, God of Thunder</div>
+    </div>
+    <!-- end of second section -->
 
+    <!-- third section -->
+    <div class="third-section">
+        <div class="blue-section">
+            <div class="alert">
+                <div class="text3">Call to action! It's time!</div>
+                <div class="text4">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="button2">Sign up</button>
+        </div>
+    </div>
+    <!-- end of third section -->
 
-
+    <!-- footer -->
+    <footer>
+        <div class="text5">Copyright &#169; The Odin Project 2021</div>
+    </footer>
 </body>
 
 </html>
